@@ -1,6 +1,7 @@
 Revision history for Perl module Module::Path
 
 0.20
+    - new function all_module_paths() by KENTNL, with thanks to PERLANCAR, GH #6 and #12
     - module_path() now accepts a config hash argument (presently unused)
     - Internals refactory by KENTNL. GH #12
 
